# pipelines-components

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  Docker.konflux.automl  Dockerfile  Dockerfile.konflux.automl  Dockerfile.konflux.autorag  Dockerfile.konflux.pipelines-components  Makefile  OWNERS  README.md  __init__.py  conftest.py  pyproject.toml  requirements-build.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.tekton/: README.md  odh-automl-ci-on-push.yaml  odh-automl-ci-pull-request.yaml  odh-automl-pull-request-v3-5-ea-1.yaml  odh-automl-pull-request.yaml  odh-automl-rhel9-poc-pull-request.yaml  odh-automl-rhel9-poc-push.yaml  odh-automl-v3-4-on-pull-request.yaml  odh-automl-v3-4-push.yaml  odh-automl-v3-5-ea-1-push.yaml  odh-automl-v3-5-ea-2-push.yaml  odh-automl-v3-5-push.yaml  odh-automl-v3.4-on-pull-request.yaml  odh-automl-v3.4-pull-request.yaml  odh-autorag-ci-on-push.yaml  odh-autorag-ci-pull-request.yaml  odh-autorag-on-pull-request.yaml  odh-autorag-v3-4-on-pull-request.yaml  odh-autorag-v3-4-push.yaml  odh-autorag-v3-5-ea-1-pull-request.yaml  odh-autorag-v3-5-ea-1-push.yaml  odh-autorag-v3-5-ea-2-pull-request.yaml  odh-autorag-v3-5-ea-2-push.yaml  odh-autorag-v3-5-pull-request.yaml  odh-autorag-v3-5-push.yaml  odh-pipelines-components-ci-on-pull-request.yaml  odh-pipelines-components-ci-on-push.yaml  odh-pipelines-components-on-pull-request.yaml  odh-pipelines-components-on-push.yaml  odh-pipelines-components-pull-request.yaml  odh-pipelines-components-v3-4-pull-request.yaml  odh-pipelines-components-v3-4-push.yaml  odh-pipelines-components-v3-5-ea-1-pull-request.yaml  (+5 more)
(+610 files in other folders)
